--- a/templates/results.html
+++ b/templates/results.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Latest CS Internships</title>
-    <!--<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">-->
-
+    <title>CS Internships</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/results.css') }}">
 
@@ -19,7 +18,7 @@
 <body>
     <!--<table id="myTable" class="tablesorter pure-table-bordered">-->
     <header>
-        <h1>Fresh CS Internship Postings</h1>
+        <h1>Latest CS Internship Postings</h1>
     </header>
     <div class="table-area">
         <table id="myTable" class="tablesorter pure-table-bordered">
