--- a/static/css/results.css
+++ b/static/css/results.css
@@ -1,9 +1,20 @@
-.table-area, header{
-    margin: 25px 25px;
+/* header section */
+header{
+    margin: 0px 0px;
+    background-color: #5bc0de;
 }
 
 h1{
+    margin: 0 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: white;
     text-align: center
+}
+
+/* content section */
+.table-area{
+    margin: 25px 125px;
 }
 
 table {
@@ -14,7 +25,7 @@ td{
 }
 
 thead tr th:first-child, tbody tr td:first-child {
-  width: 15em;
+  width: 12em;
   min-width: 15em;
   max-width: 15em;
 }
@@ -23,4 +34,18 @@ thead tr th:nth-child(2), tbody tr td:nth-child(2) {
   /*width: 15em;*/
   /*min-width: 15em;*/
   max-width: 25em;
+}
+
+thead tr th:nth-child(2), tbody tr td:nth-child(3) {
+  max-width: 10em;
+}
+
+thead tr th:nth-child(2), tbody tr td:nth-child(5) {
+  text-align: center;
+  max-width: 6em;
+}
+
+thead tr th:nth-child(2), tbody tr td:nth-child(6) {
+  text-align: center;
+  max-width: 6em;
 }
